recursion.logo.spiral.Spiral.scala.error
Compilation error:
Spiral:3: error: not found: value lenght
    avance(lenght)
           ^Spiral:5: error: not found: value lenght
    spiral(steps-1, angle, lenght+increment, increment)
                           ^