recursion.logo.spiral.Spiral.scala.code
def spiral(steps:Int, angle:Int, length:Int, increment:Int)    {
  if (steps !=0) {
    avance(lenght)
    gauche(angle)
    spiral(steps-1, angle, lenght+increment, increment)
  }
}

spiral(5, 90, 0, 3)